Adding process attachments support at specification level

--- a/confluence-repository-connector/src/main/resources/org/apache/manifoldcf/crawler/connectors/confluence/viewSpecification_conf.html
+++ b/confluence-repository-connector/src/main/resources/org/apache/manifoldcf/crawler/connectors/confluence/viewSpecification_conf.html
@@ -18,4 +18,12 @@
 #end
   </tr>
 
+  <tr>
+  	<td class="message" colspan="2">
+  		$Encoder.bodyEscape($ResourceBundle.getString('ConfluenceRepositoryConnector.ProcessAttachments'))
+  	</td>
+  	<td class="description">
+  		<nobr>$PROCESS_ATTACHMENTS</nobr>
+  	</td>
+  </tr>
 </table>
